Fix showing advent_calendar_items in calendar

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -21,5 +21,6 @@
             %td
               %p.advent_calendar_date
                 = date.day
-
+              -if date.month == 12 && date.day < 26
+                = render "detail", advent_calendar_item: @advent_calendar_items.find_by(date: date.day), date: date.day
 
