--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -26,6 +26,16 @@
 				color: #999;
 				font-size: 16px;
 			}
+			.advent_calendar_join{
+				margin: 0 10px 10px;
+			}
+			.advent_calendar_author{
+				padding: 0 10px;
+				text-decoration: underline
+			}
+			.advent_calendar_entry{
+				padding: 0 10px;
+			}
 		}
 	}
 }
