--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,9 @@
     %script{:src=>"//netdna.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"}
     %link{:href=>"//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", :rel=>"stylesheet"}
     %link{:href=>"//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", :rel=>"stylesheet"}
+    %link{:href=>"//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/default.min.css", :rel=>"stylesheet"}
+    %script{:src=>"//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"}
+    :javascript
+      hljs.initHighlightingOnLoad()
   %body
     = yield
