Enable realtime-preview with code highlighting

--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -14,8 +14,12 @@
             %div.col-sm-12
               %div.item-container
                 %div.item-body
-                  = f.text_area :body, placeholder:"本文入力"
+                  %div.item-header.item-body-header Markdown
+                  %div.item-body-content
+                    = f.text_area :body, id: "item-text", placeholder:"本文を入力してください"
                 %div.item-preview
+                  %div.item-header.item-previw-header プレビュー
+                  %div#item-preview-content
         = f.hidden_field :advent_calendar_item_id, value: @item.advent_calendar_item_id
         %div.pull-right
           = link_to "キャンセル", root_path, class:"btn btn-default" 
