--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -9,18 +9,28 @@
 		width: 100%;
 		border:1px solid #dce4ec;
 		border-radius: 3px;
+		.item-header{
+			box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+			width: 100%;
+			padding: 0 10px;
+			line-height: 39px;
+			background-color: #fafafa;
+			color: #999;
+		}
 		.item-body{
 			display: table-cell;
 			width: 50%;
 			height: 518px;
-			textarea{
-				width: 100%;
-				height: 518px;
-				resize: none;
-				margin: 0;
-				padding: 10px;
-				border: none;
-				outline: 0;	
+			.item-body-content{
+				textarea{
+					width: 100%;
+					height: 518px;
+					resize: none;
+					margin: 0;
+					padding: 10px;
+					border: none;
+					outline: 0;	
+				}
 			}
 		}
 		.item-preview{
@@ -32,3 +42,4 @@
 		}	
 	}
 }
+
