Add AdventCalendarItem edit action

--- a/app/assets/stylesheets/advent_calendar_items.css.scss
+++ b/app/assets/stylesheets/advent_calendar_items.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the advent_calendar_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.advent-calendar-item-link{
+	margin-top: 21px;
+	margin-bottom: 10.5px;
+}
