--- a/app/views/welcome/_detail.html.haml
+++ b/app/views/welcome/_detail.html.haml
@@ -1,8 +1,8 @@
 - if advent_calendar_item.present?
-  %p.text-info.advent_calendar_author
+  %p.text-info.advent-calendar-author
     = advent_calendar_item.user_name + "さん"
-  %p.advent_calendar_entry
+  %p.advent-calendar-entry
     = advent_calendar_item.comment
 - else
-  %div.advent_calendar_join
+  %div.advent-calendar-join
     = link_to "参加登録", new_advent_calendar_item_path(date: date), class: "btn btn-success btn-block"
