--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -14,7 +14,7 @@
                   = f.text_area :body, id: "item-text", placeholder:"本文を入力してください"
               %div.item-preview
                 %div.item-header.item-previw-header プレビュー
-                %div#item-preview-content
+                %div.markdown#item-preview-content
       = f.hidden_field :advent_calendar_item_id, value: @item.advent_calendar_item_id
       %div.pull-right
         = link_to "キャンセル", root_path, class:"btn btn-default" 
