--- a/app/views/advent_calendar_items/edit.html.haml
+++ b/app/views/advent_calendar_items/edit.html.haml
@@ -1,6 +1,6 @@
 %nav.navbar.navbar-default{:role=>"navigation"}
 %div.container
   %div.page-header
-    %h1 12/#{@advent_calendar_item.date}のAdventCalendar情報編集
+    %h1 #{@advent_calendar_item.date}日目(12/#{@advent_calendar_item.date})のAdventCalendar情報編集
     %hr
   = render 'form', advent_calendar_item: @advent_calendar_item
