--- a/app/views/advent_calendar_items/new.html.haml
+++ b/app/views/advent_calendar_items/new.html.haml
@@ -1,7 +1,7 @@
 %nav.navbar.navbar-default{:role=>"navigation"}
 %div.container
   %div.page-header
-    %h1 12/#{@advent_calendar_item.date}のAdventCalendarに参加登録しますか？
+    %h1 #{@advent_calendar_item.date}日目(12/#{@advent_calendar_item.date})のAdventCalendarに参加登録しますか？
     %hr
   = form_for @advent_calendar_item do |f|
     %fieldset
