--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ .advent-calendar-breadcrumb{
+ 	background: #2c3e50;
+ 	padding: .7em 0;
+ 	color: #18bc9c;
+ 	color: #fff;
+ 	a{
+ 		color: #fff;
+ 	}
+ }
