--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-default{:role=>"navigation"}
+= render 'shared/header_fluid', id: @item.advent_calendar_item_id, date: @item.advent_calendar_item.date
 %div.container-fluid
   %h2 AdventCalendar記事編集
   %hr
