--- a/app/views/advent_calendar_items/show.html.haml
+++ b/app/views/advent_calendar_items/show.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-default{:role=>"navigation"}
+= render 'shared/header', id: @advent_calendar_item.id, date: @advent_calendar_item.date
 %div.container
   %div.page-header
     %h1 #{@advent_calendar_item.date}日目(12/#{@advent_calendar_item.date})のAdventCalendar情報
@@ -19,4 +19,4 @@
     - else
       記事が投稿されていません
       %p.advent-calendar-item-link
-        = link_to "記事を登録する", new_item_path(id: @advent_calendar_item.id), class:"btn btn-success"
+        = link_to "記事を登録する", new_item_path(id: @advent_calendar_item.id, date: @advent_calendar_item.date), class:"btn btn-success"
