--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-default{:role=>"navigation"}
+= render 'shared/header_fluid', id: @item.advent_calendar_item_id, date: @date
 %div.container-fluid
   %h2 AdventCalendar記事登録
   %hr
