--- a/app/views/items/preview.html.haml
+++ b/app/views/items/preview.html.haml
@@ -1,4 +1,4 @@
 %div.advent-calendar-breadcrumb
   %div.container
     プレビュー
-= render "content", item: @item
+= render "content", item: @item, advent_calendar_item_prev: nil, advent_calendar_item_next: nil
