Add footer to welcome index refs #13

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -38,3 +38,15 @@
 		}
 	}
 }
+
+//
+// Footer
+//
+.welcome-footer{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-align: center;
+	margin-top: 30px;
+	color: #777;
+	border-top: 1px solid #e5e5e5;
+}
