--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -24,3 +24,9 @@
               -if date.month == 12 && date.day < 26
                 = render "detail", advent_calendar_item: @advent_calendar_items.find_by(date: date.day), date: date.day, today: @today
 
+%footer.welcome-footer
+  %div.container
+    %p.small
+      Powered by
+      = link_to "radvent", "https://github.com/nanonanomachine/radvent/"
+
