--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,6 +4,10 @@
       %h1 Advent Calendar 2014
 
 %div.container
+  %div.advent-calendar-description
+    %h2 AdventCalendarとは
+    %hr
+    %p クリスマスまでの期間をより楽しく過ごすため、12月1日から25日まで1日に1つ、みんなで記事を投稿するイベントです。
   %table.table.table-bordered.advent-calendar-calendar
     %thead
       %tr
