--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title Radvent
+    %title radvent
     %meta{"http-equiv"=>"X-UA-Compatible", :content=>"IE=Edge"}
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
