--- a/app/views/items/preview.html.haml
+++ b/app/views/items/preview.html.haml
@@ -2,3 +2,6 @@
   %div.container
     プレビュー
 = render "content", item: @item, advent_calendar_item_prev: nil, advent_calendar_item_next: nil
+%div.container.comments
+  %div.comment-title コメント
+  %hr
