--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,2 +1,7 @@
 = render 'shared/header', id: nil, date: @item.advent_calendar_item.date
 = render "content", item: @item, advent_calendar_item_prev: @advent_calendar_item_prev, advent_calendar_item_next: @advent_calendar_item_next
+%div.container.comments
+  %div.comment-title コメント
+  %hr
+  = render @item.comments
+  = render "comments/form", comment: @comment
