Fix not showing next item's link in navigation if next item is not published refs #17

--- a/app/views/items/_content.html.haml
+++ b/app/views/items/_content.html.haml
@@ -9,8 +9,8 @@
           12月#{item.advent_calendar_item.date}日
 
 %div.container
-  = render "navigation", date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next  
+  = render "navigation", today: today, date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next  
   %div.markdown#item-show
-  = render "navigation", date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next 
+  = render "navigation", today: today, date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next 
 = javascript_tag do
   text = #{raw item.body.to_json};
