Add custom font-family to body

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+body{
+	font-family:  'Helvetica Neue', Helvetica, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', メイリオ, Meiryo, sans-serif;
+}
+
  .advent-calendar-breadcrumb{
  	background: #2c3e50;
  	padding: .7em 0;
