--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title radvent
     %meta{"http-equiv"=>"X-UA-Compatible", :content=>"IE=Edge"}
+    %meta{"charset"=>"UTF-8"}
     %link{:href=>"//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css", :rel=>"stylesheet"}
     %link{:href=>"//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", :rel=>"stylesheet"}
     %link{:href=>"//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", :rel=>"stylesheet"}
