--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -2,4 +2,4 @@
 %div.container-fluid
   %h2 AdventCalendar記事登録
   %hr
-  = render "form", item: @item
+  = render "form", item: @item, attachment: @attachment
