--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -86,6 +86,18 @@
 		margin-bottom:0;
 		color: #798389;
 	}
+	.item-show-header-comment-count{
+		text-align:center;
+		line-height: 22px;
+		font-size: 22px;
+		font-weight: 400;
+		i{
+			margin-right: 5px;
+		}
+		.item-show-header-comment-count-text{
+			font-size: 12px;
+		}
+	}
 }
 
 .item-nav{
