--- a/app/views/welcome/_detail.html.haml
+++ b/app/views/welcome/_detail.html.haml
@@ -5,6 +5,11 @@
     - if advent_calendar_item.item
       %p.text-info.advent-calendar-entry
         = link_to advent_calendar_item.item.title, item_path(advent_calendar_item.item.id) 
+    - else
+      %p.advent-calendar-entry
+        = advent_calendar_item.comment
+      %p.advent-calendar-join
+        = link_to "編集", advent_calendar_item_path(id:advent_calendar_item.id), class:"btn btn-default btn-block btn-xs"
   - else
     %p.advent-calendar-entry
       = advent_calendar_item.comment
