Fix missing required key error when showing preview without creating item refs #27

--- a/app/views/items/_content.html.haml
+++ b/app/views/items/_content.html.haml
@@ -9,8 +9,9 @@
             = item.advent_calendar_item.user_name + "さん"
             %small
               12月#{item.advent_calendar_item.date}日
-            %span.item-show-header-edit
-              = link_to "記事を編集する", edit_item_path(id:item.id)
+            - if item.id
+              %span.item-show-header-edit
+                = link_to "記事を編集する", edit_item_path(item)
         %div.col-sm-2
           %div.item-show-header-comment-count
             %i.fa.fa-comment-o
