Fix ItemsController and views using constants about advent calendar date refs #7

--- a/app/views/items/preview.html.haml
+++ b/app/views/items/preview.html.haml
@@ -1,7 +1,7 @@
 %div.advent-calendar-breadcrumb
   %div.container
     プレビュー
-= render "content", today: nil, item: @item, advent_calendar_item_prev: nil, advent_calendar_item_next: nil
+= render "content", item: @item, advent_calendar_item_prev: nil, advent_calendar_item_next: nil
 %div.container.comments
   %div.comment-title コメント
   %hr
