--- a/app/views/items/_content.html.haml
+++ b/app/views/items/_content.html.haml
@@ -8,7 +8,7 @@
           %p.item-show-header-author
             = item.advent_calendar_item.user_name + "さん"
             %small
-              12月#{item.advent_calendar_item.date}日
+              #{Constants::MONTH}月#{item.advent_calendar_item.date}日
             - if item.id
               %span.item-show-header-edit
                 = link_to "記事を編集する", edit_item_path(item)
@@ -19,8 +19,8 @@
             %div.item-show-header-comment-count-text
               コメント
 %div.container
-  = render "navigation", today: today, date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next  
+  = render "navigation", date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next  
   %div.markdown#item-show
-  = render "navigation", today: today, date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next 
+  = render "navigation", date: item.advent_calendar_item.date, advent_calendar_item_prev: advent_calendar_item_prev, advent_calendar_item_next: advent_calendar_item_next 
 = javascript_tag do
   text = #{raw item.body.to_json};
